--- a/waybar/left.css
+++ b/waybar/left.css
@@ -9,7 +9,7 @@ border-right: 1px solid #000000;
 #custom-nix,
 #custom-discord,
 #custom-steam,
-#custom-hyprlock,
+#custom-lock,
 #custom-ghostty,
 #custom-firefox,
 #custom-code,
@@ -83,7 +83,7 @@ text-shadow: -1px 1px 2px rgba(0,0,0,0.4);
 #custom-nix,
 #custom-steam,
 #custom-discord, 
-#custom-hyprlock {
+#custom-lock {
 background: linear-gradient(90deg ,rgba(200,60,60,1),rgba(200,60,60,1));
 
 }
@@ -138,7 +138,7 @@ font-size: 16px;
 color:#000000;
 }
 
-#custom-hyprlock {
+#custom-lock {
 padding-top: 5px;
 padding-bottom: 5px;
 padding-right:10px;
